--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@alexmchan/eslint-config",
   "version": "1.0.5",
   "main": "src/index.js",
-  "author": "Alex Chan <alexander.m.chan@gmail.com>",
+  "author": "Alex Chan <alex@alexmchan.com>",
+  "repository": "https://github.com/alexanderchan/eslint-config",
   "license": "MIT",
   "private": false,
   "dependencies": {
