--- a/package.json
+++ b/package.json
@@ -8,24 +8,25 @@
   "private": false,
   "prettier": "@alexmchan/prettier-config",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
+    "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-no-only-tests": "^2.6.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "prettier": "^2.2.1"
+    "eslint-plugin-simple-import-sort": "^7.0.0"
   },
   "peerDependencies": {
-    "eslint": "^7.26.0",
-    "typescript": "^4.2.4"
+    "eslint": "^7.27.0",
+    "typescript": "^4.3.2",
+    "prettier": ">=2.3.0"
   },
   "devDependencies": {
     "@alexmchan/prettier-config": "^1.0.2",
-    "eslint": "^7.26.0",
-    "typescript": "^4.2.4"
+    "eslint": "^7.27.0",
+    "typescript": "^4.3.2"
   }
 }
