--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alexmchan/eslint-config",
-  "version": "1.0.7",
+  "version": "2.0.1",
   "main": "src/index.js",
   "author": "Alex Chan <alex@alexmchan.com>",
   "repository": "https://github.com/alexanderchan/eslint-config",
@@ -21,8 +21,8 @@
   },
   "peerDependencies": {
     "eslint": "^7.27.0",
-    "typescript": "^4.3.2",
-    "prettier": ">=2.3.0"
+    "prettier": ">=2.3.0",
+    "typescript": "^4.3.2"
   },
   "devDependencies": {
     "@alexmchan/prettier-config": "^1.0.2",
