--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
-  "name": "@alexmchan/eslint-config",
-  "version": "2.0.1",
+  "name": "@alexmchan/eslint-config-mwc",
+  "version": "2.4.0",
   "main": "src/index.js",
   "author": "Alex Chan <alex@alexmchan.com>",
   "repository": "https://github.com/alexanderchan/eslint-config",
   "license": "MIT",
-  "private": false,
-  "prettier": "@alexmchan/prettier-config",
-  "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
-    "@typescript-eslint/parser": "^4.25.0",
-    "eslint": "^7.27.0",
+  "devDependencies": {
+    "@typescript-eslint/parser": "^4.33.0",
+    "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-no-only-tests": "^2.6.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0"
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.3"
   },
   "peerDependencies": {
-    "eslint": "^7.27.0",
-    "prettier": ">=2.3.0",
-    "typescript": "^4.3.2"
-  },
-  "devDependencies": {
-    "@alexmchan/prettier-config": "^1.0.2",
-    "eslint": "^7.27.0",
-    "typescript": "^4.3.2"
+    "@typescript-eslint/eslint-plugin": ">4.33.0",
+    "@typescript-eslint/parser": ">4.31.2",
+    "eslint": ">7.32.0",
+    "eslint-config-prettier": ">8.3.0",
+    "eslint-plugin-import": ">2.24.2",
+    "eslint-plugin-no-only-tests": ">2.6.0",
+    "eslint-plugin-prettier": ">4.0.0",
+    "eslint-plugin-react": ">7.26.0",
+    "eslint-plugin-react-hooks": ">4.2.0",
+    "eslint-plugin-simple-import-sort": "7.0.0",
+    "prettier": ">2.4.1",
+    "typescript": ">4.4.3"
   }
 }
