--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "eslint-plugin-simple-import-sort": "7.0.0",
     "prettier": ">2.4.1",
     "typescript": ">4.4.3"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   }
 }
