--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Alex Chan <alex@alexmchan.com>",
   "repository": "https://github.com/alexanderchan/eslint-config",
   "license": "MIT",
+  "private": "false",
   "devDependencies": {
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^8.0.0",
