--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "Alex Chan <alex@alexmchan.com>",
   "repository": "https://github.com/alexanderchan/eslint-config",
   "license": "MIT",
-  "private": "false",
   "devDependencies": {
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^8.0.0",
@@ -20,18 +19,18 @@
     "typescript": "^4.4.3"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": ">4.33.0",
-    "@typescript-eslint/parser": ">4.31.2",
-    "eslint": ">7.32.0",
-    "eslint-config-prettier": ">8.3.0",
-    "eslint-plugin-import": ">2.24.2",
-    "eslint-plugin-no-only-tests": ">2.6.0",
-    "eslint-plugin-prettier": ">4.0.0",
-    "eslint-plugin-react": ">7.26.0",
-    "eslint-plugin-react-hooks": ">4.2.0",
-    "eslint-plugin-simple-import-sort": "7.0.0",
-    "prettier": ">2.4.1",
-    "typescript": ">4.4.3"
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.31.2",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-no-only-tests": "^2.6.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.3"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
