--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-simple-import-sort": "^8.0.0"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.25.0",
     "eslint": "^8.25.0",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4"
