--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@alexmchan/eslint-config",
-  "version": "2.5.5",
+  "version": "2.5.6",
   "main": "src/index.js",
   "author": "Alex Chan <alex@alexmchan.com>",
   "repository": "https://github.com/alexanderchan/eslint-config",
   "license": "MIT",
+  "private": false,
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
